	* Added a 'make post' target in 'docs/Makefile.am'.
2023-03-29 Fred Gleason <fredg@paravelsystems.com>
	* Removed the default skins for rdairplay(1) and rdpanel(1).
2023-06-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.0jammy
2023-06-09 Fred Gleason <fredg@paravelsystems.com>
	* Added 'libmad0', 'libtwolame0' and 'libmp3lame0' to the set of
	package dependencies.
2023-06-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.1jammy
2023-06-16 Fred Gleason <fredg@paravelsystems.com>
	* Removed the Release Candidate warning from the installation HOWTO
2023-11-21 Fred Gleason <fredg@paravelsystems.com>
	* Added 'docs/mint21_cleanups.txt'.
2023-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'Power Manager' from the list of services to be disabled
	in 'docs/mint21_cleanups.txt'.
2024-04-22 Fred Gleason <fredg@paravelsystems.com>
	* Forked to branch 'noble_24.04'.
2024-04-30 Fred Gleason <fredg@paravelsystems.com>
	* Changed the package version to 0.0.0noble.
	* Modified basic metadata to reflect Ubuntu 24.04.
2024-04-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.0.1noble.
2024-05-01 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked language in the installation documentation.
2024-05-01 Fred Gleason <fredg@paravelsystems.com>
	* Updated the installation HOWTO.
2024-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed references to Ubuntu 22.04 Jammy Jellyfish to point to
	Ubuntu 24.04 Noble Numbat.
2024-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Added 'paravelview' and 'lwmon' packages to the base installation.
2024-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.1.1noble.
2024-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Added preseeds for the 'postfix' and 'pbuilder' packages.
2024-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.1.2noble.